# CMSIS-CV

./: .gitignore  ARM.CMSIS-CV.pdsc  README.md  gen_pack.sh  index.html  version.js
.github/workflows/: gh-pages.yml  runtest.yaml
Documentation/: README.md
Documentation/Doxygen/: cv.dxy  cv.dxy.in  gen_doc.sh  linkchecker-out.csv
Documentation/Doxygen/src/: history.md  mainpage.md
Examples/: README.md
Include/: arm_cv.h  arm_cv_common.h  arm_cv_types.h  arm_cv_types_f16.h
Include/cv/: color_transforms.h  feature_detection.h  image_transforms.h  linear_filters.h
PrivateInclude/: arm_image_resize_common.h  arm_linear_filter_common.h  arm_linear_filter_generator.h
Source/: CMakeLists.txt  arm_bgr_8U3C_to_gray8.c  arm_bgr_8U3C_to_rgb24.c  arm_crop_rgb24.c  arm_cv_common.c  arm_gaussian.c  arm_rgb24_to_gray8.c  arm_yuv420_to_gray8.c  arm_yuv420_to_rgb24.c  cannysobel.c  gaussian.c
Source/ColorTransforms/: arm_bgr_8U3C_to_gray8.c  arm_bgr_8U3C_to_rgb24.c  arm_gray8_to_rgb24.c  arm_rgb24_to_gray8.c  arm_yuv420_to_gray8.c  arm_yuv420_to_rgb24.c
Source/FeatureDetection/: arm_cannysobel.c  cannysobel.c
Source/ImageTransforms/: arm_crop_gray8.c  arm_crop_rgb24.c  arm_image_resize_bgr_8U3C.c  arm_image_resize_bgr_8U3C_f32.c  arm_image_resize_bgr_8U3C_to_rgb24_f32.c  arm_image_resize_common_f32.c  arm_image_resize_gray8.c  arm_image_resize_gray8_f32.c
Source/LinearFilters/: arm_gaussian.c  arm_gaussian_5x5.c  arm_gaussian_7x7_buffer_15.c  arm_gaussian_7x7_buffer_31.c  arm_linear_common.c  arm_sobel_horizontal.c  arm_sobel_vertical.c
Testing/board/: .clangd  .gitignore  README.md  cdefault.yml  cinput.c  cinput.h  cmsiscv.cproject.yml  cmsiscv.csolution.yml  debug.py  main.cpp  pdate-rte  requirements.txt  runall.py  test_config.h  test_configs.py  test_desc.py
Testing/board/Patterns/: Girl3.tiff  Gray21.tiff  House.tiff  House2.tiff  JellyBeans.tiff  JellyBeans2.tiff  Mandrill.tiff  Mandrill_cropped.tiff  Moon.tiff  Peppers.tiff  ResolutionChart.tiff  Ruler.tiff
Testing/board/RefPatterns/: test_0_img_0.tiff  test_100_img_0.tiff  test_101_img_0.tiff  test_102_img_0.tiff  test_103_img_0.tiff  test_104_img_0.tiff  test_105_img_0.tiff  test_106_img_0.tiff  test_107_img_0.tiff  test_10_img_0.tiff  test_110_img_0.tiff  test_111_img_0.tiff  test_112_img_0.tiff  test_113_img_0.tiff  (+186 more)
Testing/browser/: CMakeLists.txt  GenericNodes.h  README.md  cg_status.h  create_web.py  exported.cmake  mkrelease.sh
Testing/browser/opencv/: README.md
Testing/browser/opencv/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
Testing/browser/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Testing/browser/stream/: AppNodes.h  appnodes.py  common.c  create.py  cv_app_settings.h  simple_graph.py
Testing/browser/stream/opencv_nodes/: __init__.py
Testing/browser/stream/opencv_nodes/canny_edge/: node.hpp  node.py
Testing/browser/stream/opencv_nodes/gaussian/: node.hpp  node.py
Testing/browser/stream/tests/: __init__.py
Testing/browser/stream/tests/canny_edge/: CMakeLists.txt  canny_edge_graph.py  cv.dot  cv_canny_edge_ocv_scheduler.cpp  cv_canny_edge_ocv_scheduler.h  cv_canny_edge_scheduler.cpp  cv_canny_edge_scheduler.h  cv_ocv.dot  pre_schedule_cv.dot  pre_schedule_cv_ocv.dot  stream.c  stream_ocv.c
Testing/browser/stream/tests/gaussian/: CMakeLists.txt  cv.dot  cv_gaussian_ocv_scheduler.cpp  cv_gaussian_ocv_scheduler.h  cv_gaussian_scheduler.cpp  cv_gaussian_scheduler.h  cv_ocv.dot  gaussian_graph.py  pre_schedule_cv.dot  pre_schedule_cv_ocv.dot  stream.c  stream_ocv.c
Testing/browser/stream/tests/template/: CMakeLists.txt  README.md  template_graph.py
Testing/browser/templates/: CMakeLists.txt  exported.cmake  index.html  index_horizontal.html  root.html  stream.c
Testing/browser/web/: cv.js  index.html
Testing/browser/web/canny_edge/: index.html  index_horizontal.html  index_horizontal_ocv.html  index_ocv.html  uiconfig.js  uiconfig_ocv.js
Testing/browser/web/gaussian/: index.html  index_horizontal.html  index_horizontal_ocv.html  index_ocv.html  uiconfig.js  uiconfig_ocv.js
cmsiscv_nodes/cpp/: color_transform_nodes.hpp  feature_detection_nodes.hpp  image_transform_nodes.hpp  linear_filter_nodes.hpp
cmsiscv_nodes/nodes/: README.md  __init__.py  color_transform_nodes.py  feature_detection_nodes.py  image_transform_nodes.py  linear_filter_nodes.py  node_types.py
main/: annotated.html  annotated_dup.js  classes.html  dir_092a5c72e28054ab18be56186c0b7472.html  dir_2c357711a170e63cbdb32a9298395404.html  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_856524284ebe840938865dc061f982fb.html  dir_90ed5053c4d1818ebeb29f5170a5e567.html  dir_967e56ae45e467d9a7f11129035003e7.html  dir_bb6956ee7fb864fe64365475a1722e78.html  dir_e29fd4d7e4640dc3e9d25f24ec4d13d3.html  footer.js  group__colorTransform.html  group__colorTransform.js  group__featureDetection.html  group__featureDetection.js  group__imageTransform.html  group__imageTransform.js  group__linearFilter.html  group__linearFilter.js  index.html  index.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html  rev_hist.html  structarm__cv__gradient__q15__t.html  structarm__cv__image__bgr__8U3C__t.html  structarm__cv__image__gradient__q15__t.html  structarm__cv__image__gray16__t.html  structarm__cv__image__gray8__t.html  structarm__cv__image__q15__t.html  structarm__cv__image__rgb24__t.html  structarm__cv__image__rgba__t.html  structarm__cv__image__t.html  structarm__cv__image__yuv420__t.html
main/search/: all_0.js  all_2.js  all_3.js  classes_0.js  functions_0.js  groups_0.js  groups_3.js  searchdata.js
stream_nodes/cpp/: color_transform_nodes.hpp  feature_detection_nodes.hpp  linear_filter_nodes.hpp
stream_nodes/nodes/: __init__.py  color_transform_nodes.py  feature_detection_nodes.py  linear_filter_nodes.py  node_types.py
(+24 files in other folders)
